test/core/errors/indexed_offsets_error/zs/parameter_no_array_error.zs
package parameter_no_array_error;

struct Parameterized(int32 id)
{
    int32 position : position == id;
};

struct ParameterNoArrayError
{
    Parameterized(@index) field;
};
